# pkgbridge

./: Cargo.toml  README(1).md  README.md
docs/: README.md
src/: cli.rs  config.rs  desktop.rs  distro.rs  main.rs  pkgdetect.rs  pm.rs
