[package]
name = "pkgbridge"
version = "0.1.0"
edition = "2021"
description = "Cross-distro package installer/exporter for Distrobox"
license = "MIT OR Apache-2.0"
repository = ""

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
which = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
humantime = "2.1"
shell-escape = "0.1"
toml = "0.8"
log = "0.4"
env_logger = "0.11"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
